--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,8 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function(e) {
+
+  function playSound(e) {
     // Finds the audio file matching the pressed key
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
@@ -69,7 +70,7 @@
     audio.play();
     // Adds the 'playing' class to the pressed key to change its style
     key.classList.add('playing');
-  });
+  }
  
   // Ensures that the visual effect of pressing a key goes away
   function removeTransition(e) {
@@ -81,6 +82,7 @@
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
+  window.addEventListener('keydown', playSound);
 
 </script>
 
