--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,15 +37,15 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const bornIn1500s = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.table(bornIn1500s);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
-    // Array.prototype.reduce()
-    // 4. How many years did all the inventors live all together?
+    // Array.prototype.reduce(){returnll together?
 
     // 5. Sort the inventors by years lived
 
