--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -41,7 +41,8 @@
     console.table(bornIn1500s);
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const inventorFullNames = inventors.map(inventor => inventor.first + " " + inventor.last);
+    console.table(inventorFullNames);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
