--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -47,9 +47,15 @@
     // 3. Sort the inventors by birthdate, oldest to youngest
     const inventorsByDOB = inventors.sort((a, b) => a.year-b.year);  // Could also be done with if statement
     console.table(inventorsByDOB);
-    // Array.prototype.reduce(){returnll together?
-
+    // Array.prototype.reduce()
+    // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);}, 0);
+    console.log(totalYears);
     // 5. Sort the inventors by years lived
+    const inventorsByYearsLived = inventors.sort((a, b) => 
+    (a.passed - a.year) - (b.passed - b.year));
+    console.table(inventorsByYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
