--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -67,7 +67,8 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+      const peopleByLastName = people.sort();
+      console.table(peopleByLastName);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
