--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -36,11 +36,16 @@
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const commentWithID = comments.find(comment => comment.id === 823423);
+    console.log(commentWithID);
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    const commentToDelete = comments.findIndex(comment => comment.id === 823423);
+    const updatedComments = [
+      ...comments.slice(0, commentToDelete), 
+      ...comments.slice(commentToDelete + 1)];
+    console.log(updatedComments);
   </script>
 </body>
 </html>
